--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,5 +1,6 @@
 * {
     border: none;
+    color: #150c30;
     border-radius: 10;
     font-family: "JetBrainsMono Nerd Font";
     font-size: 20px;
